# RAS

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/: CMakeLists.txt  find_polynomials.cpp  find_polynomials.h  perspective_embedding.cpp  perspective_embedding.h  robust_algebraic_segmentation.cpp  robust_algebraic_segmentation.h
core/utils/: arma_svd.cpp  arma_svd.h  arma_wrapper.cpp  arma_wrapper.h  balls_and_bins.cpp  balls_and_bins.h  cholesky.cpp  cholesky.h  generalized_eigenvalues.cpp  generalized_eigenvalues.h  jacobi_svd.cpp  jacobi_svd.h  mat_nd.cpp  mat_nd.h  math.cpp  math.h  ras_params.cpp  ras_params.h  ras_types.cpp  ras_types.h  subspace_angle.cpp  subspace_angle.h
tests/: CMakeLists.txt
tests/basic_tests/: CMakeLists.txt
tests/core_tests/: CMakeLists.txt  balls_and_bins.cpp  balls_and_bins_data.h  find_polynomials.cpp  find_polynomials_data.h  perspective_embedding.cpp  perspective_embedding_data.h  robust_algebraic_segmentation.cpp  robust_algebraic_segmentation_data.h
tests/core_tests/utils/: mat_equal_test.cpp  mat_equal_test.h
